 445.	[bug]		Doing a 0 bit isc_bitstring_copy() of an lsb0
			bitstring triggered a REQUIRE statement.  The REQUIRE
			statement was incorrect. [RT #297]

 443.	[bug]		When loading a master file failed because of an
			unrecognized RR type name, the error message
			did not include the file name and line number. 
			[RT #285]

 442.	[bug]		TSIG signed messages that did not match any view
			crashed the server. [RT #290]

 441.	[bug]		Nodes obscured by a DNAME were inaccessible even
			when DNS_DBFIND_GLUEOK was set.

 436.	[bug]		If recvmsg() returned EHOSTUNREACH or ENETUNREACH,
			which sometimes happens on Linux, named would enter
			a busy loop.  Also, unexpected socket errors were
			not logged at a high enough logging level to be
			useful in diagnosing this situation. [RT #275]

 435. [bug]		dns_zone_dump() overwrote existing zone files 
			rather than writing to a temporary file and
			renaming.  This could lead to empty or partial
			zone files being left around in certain error
			conditions involving the initial transfer of a
			slave zone, interfering with subsequent server
			startup. [RT #282]

 429.	[bug]		The space reserved for a TSIG record in a response
			was 2 bytes too short, leading to message
			generation failures.

 428.   [bug]		rbtdb.c:find_closest_nxt() erroneously returned
			DNS_R_BADDB for nodes which had neither NXT nor SIG NXT
			(e.g. glue).  This could cause SERVFAILs when
			generating negative responses in a secure zone.

 427.	[bug]		Avoid going into an infinite loop when the validator
			gets a negative response to a key query where the
			records are signed by the missing key.

 426.	[bug]		Attempting to generate an oversized RSA key could
			cause dnssec-keygen to dump core.

 425.	[bug]		Warn about the auth-nxdomain default value change
			if there is no auth-nxdomain statement in the
			config file. [RT #287]

 424.	[bug]		notify_createmessage() could trigger an assertion failure